[package]
name = "Balatro_Manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
octocrab = "0.39.0"
futures = { version = "0.3.30", features = ["executor"]}
tokio = {version = "1.40.0", features = ["full"]}
tokio-stream = "0.1.16"
